Scared of Losing you

--- a/Writeup/Laser_spec_triumf/Laser_spec_triumf.tex
+++ b/Writeup/Laser_spec_triumf/Laser_spec_triumf.tex
@@ -1,6 +1,6 @@
 \noindent This chapter is intended as a brief introduction to the laser spectroscopy experiment present at TRIUMF, with special emphasis on the parts relevant to this work. A more complete description of the experiment can be found in \cite{CFBS}.
 
-As stated in the previous chapter, the laser spectroscopy operates by bringing a particle beam into resonance, through Doppler tuning, with a co-propagating (or counter-propagating, as is the case at TRIUMF) laser, which excites transitions in the electronic structure of the particles. The photons that produced as a result of the de-excitation are then measured by light collection instruments. Located in the ISAC I (Isotope Separator and ACcelerator) experimental hall at TRIUMF, as shown in Fig. \ref{loc}, the Laser Spectroscopy experiment at TRIUMF, more specifically known as the Collinear Fast-Beam laser Spectroscopy (CFBS) experiment, is shown in Fig. \ref{exp}. 
+As stated in the previous chapter, collinear laser spectroscopy operates by bringing a particle beam into resonance, through Doppler tuning, with a co-propagating (or counter-propagating, as is the case at TRIUMF) laser, which excites transitions in the electronic structure of the particles. The photons that are produced as a result of the de-excitation are then measured by light collection instruments. Located in the ISAC I (Isotope Separator and ACcelerator) experimental hall at TRIUMF, as shown in Fig. \ref{loc}, the Laser Spectroscopy experiment at TRIUMF, more specifically known as the Collinear Fast-Beam laser Spectroscopy (CFBS) experiment, is shown in Fig. \ref{exp}. 
 
 
 \begin{figure}[h]
@@ -19,10 +19,10 @@ At TRIUMF, radioactive atoms are produced by 500 MeV protons impinging on a heav
 
 \section{Radio Frequency Quadrupole (RFQ) Trap}
 
-The ions enter the CFBS experiment as a continuous beam, where they first encounter a radio frequency quadrupole (RFQ) Paul Trap \cite{CFBS}. Here, the atoms can enter the RFQ trap and are collected for a pre-determined collection time, after which they are released in bunches. Bunching the atoms helps to reduce background counts. However, in the case of the CFBS, this reduction is insignificant compared to the base level of photons that form the background. Briefly, the light collection system is triggered on the release of the ion bunches, reducing the available time for background photons to be counted. As the light collection system is only sensitive to photons for the time window during which the ion bunch passes through the interaction region, background counts are also only collected for this time. Alternatively, photons are collected continuously, whether or not there are resonant ions in the interaction region, allowing the signal to background ratio to diminish over time. 
+The ions enter the CFBS experiment as a continuous beam, where they first encounter a radio frequency quadrupole (RFQ) Paul Trap \cite{CFBS}. Here, the atoms can enter the RFQ trap and are collected for a pre-determined collection time, after which they are released in bunches. Bunching the atoms helps to significantly reduce background counts. Briefly, the light collection system is triggered on the release of the ion bunches, reducing the available time for background photons to be counted. As the light collection system is only sensitive to photons for the time window during which the ion bunch passes through the interaction region, background counts are also only collected for this time. Alternatively, photons are collected continuously, whether or not there are ions in the interaction region, allowing the signal to noise ratio to diminish over time. Ideally, the two methods produce the same signal, but with the latter have a significantly higher background. In general, the background is formed by dark counts from the photo-multiplier and actual photons scattered around the vacuum system. When continuously collected, the background is the rate of these events multiplied by the collection time. When the beam is pulsed, the background is the rate of the background events times the pulse length times the number of pulses per second. A typical pulse length is roughly 10$\mu s$ at about 100 pulses per second \cite{CFBS}.
 
 \section{Charge Exchange Cell (CEC)}
-If the aim is to investigate transitions in a neutral atom, then the ions must regain their lost electron. This is the role of the charge exchange cell (CEC), shown in detail in Fig. \ref{CEC}. Using an alkali-metal vapour that is circulated perpendicularly to the direction of the beam, the CEC provides a source of electrons for the oncoming ions to capture. This introduces an issue, however. As the alkali-metal vapour can not be entirely contained to the CEC, any light collection instruments, such as a photo-multiplier tube,  must be located further down the beamline. This is done to avoid the growth of an alkali-metal coating on the light-collection surfaces, which would significantly hamper the collection of resonant photons as the experiment progresses. This decision provides the \emph{raison d'être} for this work, as it introduces the opportunity for optical pumping, discussed in detail in Chapter \ref{Op_pump}. Since the ions are neutralized in the CEC, they can no longer be accelerated through the use of an electrostatic potential. As such, they must be brought into resonance before they enter the interaction region. This is done using a set of electrodes present in front of the CEC, shown in Fig. \ref{exp}, as well as floating the CEC.
+If the aim is to investigate transitions in a neutral atom, then the ions must regain their lost electron. This is the role of the charge exchange cell (CEC), shown in detail in Fig. \ref{CEC}. Using an alkali-metal vapour that is circulated perpendicularly to the direction of the beam, the CEC provides a source of electrons for the oncoming ions to capture. This introduces an issue, however. As the alkali-metal vapour can not be entirely contained to the CEC, any light collection instruments, such as a photo-multiplier tube,  must be located further down the beamline. This is done to avoid the growth of an alkali-metal coating on the light-collection surfaces which would significantly hamper the collection of resonant photons as the experiment progresses. This decision provides the \emph{raison d'être} for this work, as it introduces the opportunity for optical pumping, discussed in detail in Chapter \ref{Op_pump}. Since the ions are neutralized in the CEC, they can no longer be accelerated through the use of an electrostatic potential. As such, they must be brought into resonance before they enter the interaction region. This is done using a set of electrodes present in front of the CEC, shown in Fig. \ref{exp}, as well as floating the CEC.
 
 In the case of transitions present in the ion, then the CEC is unneeded, and the final acceleration is done using a mesh present within the LCR, detailed in the next section. The location of the mesh is chosen such that the ions are in resonance just as they pass the light collection system, removing the possibility that optical pumping could significantly affect the results of the experiment. 
 
