--- a/Writeup/julienreferences.bib
+++ b/Writeup/julienreferences.bib
@@ -6,16 +6,12 @@ volume = {34},
 number = {208},
 pages = {280-299},
 year  = {1892},
-publisher = {Taylor & Francis},
-doi = {10.1080/14786449208620318},
-URL = { https://doi.org/10.1080/14786449208620318},
-eprint = {  https://doi.org/10.1080/14786449208620318}
+publisher = {Taylor & Francis}
 }
 
 @book{landau1975,
   title={The Classical Theory of Fields},
   author={Landau, L.D. and Lifshitz, E.M},
-  isbn={9780750627689},
   series={Course of theoretical physics},
   year={1975},
   publisher={Butterworth-Heinemann}
@@ -31,24 +27,19 @@ day={01},
 volume={12},
 number={37},
 pages={741--743},
-issn={1432-1904},
-doi={10.1007/BF01504828},
-url={https://doi.org/10.1007/BF01504828}
+issn={1432-1904}
 }
 
 @article{Lieb2001,
 author={Lieb, Klaus-Peter},
-title={Theodor Schmidt and Hans Kopfermann -- Pioneers in Hyperfine Physics},
+title={Theodor {S}chmidt and {H}ans {K}opfermann -- {P}ioneers in {H}yperfine {P}hysics},
 journal={Hyperfine Interactions},
 year={2001},
 month={No},
 day={01},
 volume={136},
 number={3},
-pages={783--802},
-issn={1572-9540},
-doi={10.1023/A:1020506201810},
-url={https://doi.org/10.1023/A:1020506201810}
+pages={783--802}
 }
 
 
@@ -59,8 +50,6 @@ journal = {Nuclear Instruments and Methods in Physics Research Section A-Acceler
 volume = {811},
 pages = {57-69},
 ISSN = {0168-9002},
-DOI = {10.1016/j.nima.2015.11.145},
-url = {<Go to ISI>://WOS:000368635700009},
 year = {2016},
 type = {Journal Article}
 }
@@ -70,7 +59,6 @@ author = {Yang, Fujia and Hamilton Joseph H.},
 title = {Modern atomic and nuclear physics},
 year = {2010},
 publisher = {World Scientific},
-ISBN = {978-981-283-679-3}
 }
 
 @phdthesis{TomT,
@@ -83,17 +71,13 @@ note = {Unpublished}
 
 @article{GA69,
   title = {Nuclear mean-square charge radii of ${}^{63,64,66,68-82}$Ga nuclei: No anomalous behavior at $N=32$},
-  author = {Procter, T. J. and Billowes, J. et al.},
+  author = {T. Procter et al.},
   journal = {Phys. Rev. C},
   volume = {86},
   issue = {3},
-  pages = {034329},
-  numpages = {6},
   year = {2012},
   month = {Sep},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.86.034329},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.86.034329}
 }
 
 
@@ -101,8 +85,7 @@ note = {Unpublished}
 title = {Nuclear physics in a nutshell},
 author = {Bertulani, Carlos A.},
 publisher = {Princeton University Press},
-year = {2007},
-ISBN = {978-0691125053}
+year = {2007}
 }
 
 @article{voigt,
@@ -112,7 +95,6 @@ journal = {Review of Scientific Instruments},
 volume = {45},
 year = {1974},
 pages = {1369},
-doi = {10.1063/1.1686503}
 }
 
 
@@ -120,15 +102,12 @@ doi = {10.1063/1.1686503}
 author = {Metcalf, H.J and Straten, P. van der},
 title = {Laser Cooling and trapping},
 publisher = {Springer-Verlag New York},
-year = {1999},
-ISBN = {978-1-4612-1470-0},
-DOI = {10.1007/978-1-4612-1470-0}
+year = {1999}
 }
 
 @book{townsend,
 author = {Townsend, John S.},
 publisher = {Univ Science Books},
-ISBN = {978-1891389788},
 year = {2012},
 title = {A Modern Approach to Quantum Mechanics}
 }
@@ -137,8 +116,7 @@ title = {A Modern Approach to Quantum Mechanics}
 author = {Morin, D.},
 title = {Introduction to Classical Mechanics},
 year = {2008},
-publisher = {Cambridge University Press},
-ISBN = {978-0521876223}
+publisher = {Cambridge University Press}
 }
 
 
@@ -152,9 +130,7 @@ ISBN = {978-0521876223}
   numpages = {9},
   year = {2017},
   month = {Oct},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.96.044324},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.96.044324}
+  publisher = {American Physical Society}
 }
 
 @misc{wolf,
@@ -166,9 +142,6 @@ year = {{2017}}
 @book{thermal,
   title={Thermal Physics},
   author={Kittel, C. and Kroemer, H.},
-  isbn={9780716710882},
-  lccn={79016677},
-  url={https://books.google.ca/books?id=c0R79nyOoNMC},
   year={1980},
   publisher={W. H. Freeman}
 }
